--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "epicgame",
   "version": "0.2.0",
@@ -6,24 +7,20 @@
   "author": "a.mezin@corp.mail.ru",
   "license": "MIT",
   "devDependencies": {
-    "body-parser": "^1.14.2",
+    "body-parser": "^1.15.0",
     "errorhandler": "^1.4.3",
     "express": "^4.13.4",
-    "grunt": "~0.4.2",
-    "grunt-cli": "^0.1.13",
-    "grunt-concurrent": "^1.0.0",
-    "grunt-contrib-connect": "~0.6.0",
-    "grunt-contrib-qunit": "^0.7.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-fest": "~0.1.4",
-    "grunt-shell": "^1.1.1"
+    "grunt": "^0.4.5",
+    "grunt-concurrent": "^2.1.0",
+    "grunt-contrib-cssmin": "^1.0.0",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-qunit": "^1.0.1",
+    "grunt-contrib-requirejs": "^0.4.4",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-fest": "^0.1.6",
+    "grunt-shell": "^1.1.2"
   },
   "scripts": {
-    "start": "node server"
-  },
-  "dependencies": {
-    "express-http-proxy": "^0.6.0",
-    "express-rewrite": "0.0.4",
     "start": "node server",
     "test": "grunt test"
   }
