--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-qunit": "^1.0.1",
     "grunt-contrib-requirejs": "^0.4.4",
+    "grunt-contrib-uglify": "^1.0.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-fest": "^0.1.6",
     "grunt-shell": "^1.1.2"
